# ArkAnalyzer-HapRay

./: .gitattributes  .gitignore  README.md  license.rtf  package-lock.json  package.json  setup.sh  setup_offline.sh  welcome.html
.github/: build.yaml
docker/: build.sh  (+2 more)
perf_testing/: .gitignore  config.yaml  main.py  main.spec  package.json  pyproject.toml  requirements.txt  setup_env.py  zip.js
perf_testing/aw/: PerfTestCase.py
perf_testing/aw/common/: CommonUtils.py
perf_testing/aw/config/: config.py  config.yaml
perf_testing/hapray/: __init__.py
perf_testing/hapray/actions/: opt_action.py  perf_action.py  update_action.py
perf_testing/hapray/analyze/: __init__.py  base_analyzer.py  component_reusable_analyzer.py  empty_frame_analyzer.py  frame_drop_analyzer.py  perf_analyzer.py
perf_testing/hapray/core/: PerfTestCase.py  perf_testcase.py  report.py
perf_testing/hapray/optimization_detector/: file_info.py  invoke_symbols.py  optimization_detector.py
perf_testing/scripts/: main.py  merge_folders.py
perf_testing/testcases/com.alipay.mobile.client/: ResourceUsage_PerformanceDynamic_zhifubao_0010.py  ResourceUsage_PerformanceDynamic_zhifubao_0020.json  ResourceUsage_PerformanceDynamic_zhifubao_0020.py  ResourceUsage_PerformanceDynamic_zhifubao_0060.json  ResourceUsage_PerformanceDynamic_zhifubao_0060.py  ResourceUsage_PerformanceDynamic_zhifubao_0070.py  ResourceUsage_PerformanceDynamic_zhifubao_0080.py  ResourceUsage_PerformanceDynamic_zhifubao_0100.py
perf_testing/testcases/com.example.wsywechat/: PerformanceDynamic_com_example_wsywechat_0010.json  PerformanceDynamic_com_example_wsywechat_0010.py
perf_testing/testcases/com.jd.hm.mall/: ResourceUsage_PerformanceDynamic_jingdong_0010.json  ResourceUsage_PerformanceDynamic_jingdong_0010.py  ResourceUsage_PerformanceDynamic_jingdong_0020.json  ResourceUsage_PerformanceDynamic_jingdong_0020.py  ResourceUsage_PerformanceDynamic_jingdong_0030.py  ResourceUsage_PerformanceDynamic_jingdong_0040.py  ResourceUsage_PerformanceDynamic_jingdong_0050.json  ResourceUsage_PerformanceDynamic_jingdong_0050.py  ResourceUsage_PerformanceDynamic_jingdong_0080.py  ResourceUsage_PerformanceDynamic_jingdong_0090.py  ResourceUsage_PerformanceDynamic_jingdong_0110.py  ResourceUsage_PerformanceDynamic_jingdong_0120.py
perf_testing/testcases/com.ss.hm.ugc.aweme/: ResourceUsage_PerformanceDynamic_Douyin_0010.json  ResourceUsage_PerformanceDynamic_Douyin_0010.py  ResourceUsage_PerformanceDynamic_Douyin_0030.json  ResourceUsage_PerformanceDynamic_Douyin_0030.py  ResourceUsage_PerformanceDynamic_Douyin_0040.json  ResourceUsage_PerformanceDynamic_Douyin_0040.py  ResourceUsage_PerformanceDynamic_Douyin_0060.json  ResourceUsage_PerformanceDynamic_Douyin_0060.py  ResourceUsage_PerformanceDynamic_Douyin_0080.py  ResourceUsage_PerformanceDynamic_Douyin_0090.json  ResourceUsage_PerformanceDynamic_Douyin_0090.py  (+7 more)
(+232 files in other folders)
